--- a/html/index.html
+++ b/html/index.html
@@ -37,9 +37,7 @@
                     <div class="instructions">
                         <div class="step-box">
                             <div class="header"> Step One </div>
-                            <div class="sub-text"> Obtain your unofficial academic transcript from 
-                                <a id="link" target="_blank" rel="noopener noreferrer" href="https://ssbp.lehigh.edu/ssb/twbkwbis.P_GenMenu?name=bmenu.P_MainMnu"> Banner </a>
-                            </div>
+                            <div class="sub-text"> Obtain your unofficial academic transcript</div>
                         </div>
                         <div class="step-box">
                             <div class="header"> Step Two </div>
