--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,13 @@
                                 This is an algorithm dedicated to optimizing one's cumulative GPA with consideration
                                 of the new pass/fail option offered at many universities nationwide.
                             </div>
+                            <div class="disclaimer-header">
+                                DISCLAIMER
+                            </div>
+                            <div class="disclaimer-text">
+                                This app is not meant to be the basis of ANY decisions made about one's academic career. 
+                                It is simply a tool meant to aid students in projecting their grades.
+                            </div>
                         </div>
                     </div>
                 </div>
