footer made responsive

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
             <!-- <button type="button" id="classGradeCalc-page-btn">Course Grade</button> -->
             <!-- <div class="topbar-text">◐ grade wizard ◑</div> -->
         </header>
-        <div id="passFailCalc-container">
+        <div class="page-wrap" id="passFailCalc-container">
             <div class="view-container">
                 <!--INSTRUCTIONS BOX-->
                 <div class="instruct-wrap">
@@ -149,7 +149,7 @@
 
         <div class="footer">
             <div class="footer-text">
-                for any issues or inquiries email us at GradeWizardTeam@gmail.com
+                for any issues or inquiries email us at gradewizardcalc@gmail.com
             </div>
         </div>
         <script type="text/javascript" src="../js/ClickFunctions.js"></script>
