--- a/html/index.html
+++ b/html/index.html
@@ -79,7 +79,7 @@
                                             <th class="th-class">Credits</th>
                                             <th class="th-class">Retake?</th>
                                             <th class="th-class" id="th">Old Grade</th>
-                                            <th class="th-class" id="th">Pass/Fail?</th>
+                                            <th class="th-class" id="th">Keep Grade?</th>
                                         </tr>
                                     </thead>
                                     <tbody id="passFailForm-tbody">
