mobile is sexyyyyyyy

--- a/html/index.html
+++ b/html/index.html
@@ -78,17 +78,17 @@
                                             <th class="th-class">Course</th>
                                             <th class="th-class">Grade</th>
                                             <th class="th-class">Credits</th>
-                                            <th class="th-class">Retake?</th>
-                                            <th class="th-class" id="th">Old Grade</th>
+                                            <th class="th-class retakeCell">Retake?</th>
+                                            <th class="th-class oldGradeCell" id="th">Old Grade</th>
                                             <th class="th-class" id="th">Keep Grade?</th>
                                         </tr>
                                     </thead>
                                     <tbody id="passFailForm-tbody">
                                     </tbody>
                                 </table> 
+                            <button type="submit" id="submit-btn">Submit</button>
                             <button type="submit" id="addRow-btn">Add Class</button>
                             <button type="submit" id="removeRow-btn">Remove Class</button>
-                            <button type="submit" id="submit-btn">Submit</button>
                             <div class="output-box" id="out">
                                 <!--DISPLAY OUTPUTS-->
                             </div>
