jimmy likes poo

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             <div class="topnav" id="navBar"> 
                 <div class="topbar-text nav-item" id="logo">◐ grade wizard ◑</div>
 
-                <div class="nav-button nav-item" id="passFailCalc-page-btn"> pass/fail </div>
+                <div class="nav-button nav-item" id="passFailCalc-page-btn"> p/f gpa calc </div>
                 <div class="nav-button nav-item" id="classGradeCalc-page-btn"> course grade </div>
 
                 <button class="nav-button mobile-nav-icon" id="mobile-nav-options-btn"> <i class="fa fa-bars" aria-hidden="true"></i> </button>
@@ -78,9 +78,9 @@
                                             <th class="th-class">Course</th>
                                             <th class="th-class">Grade</th>
                                             <th class="th-class">Credits</th>
+                                            <th class="th-class keepGradeCell" id="th">Keep Grade?</th>
                                             <th class="th-class retakeCell">Retake?</th>
                                             <th class="th-class oldGradeCell" id="th">Old Grade</th>
-                                            <th class="th-class" id="th">Keep Grade?</th>
                                         </tr>
                                     </thead>
                                     <tbody id="passFailForm-tbody">
