change quality points to grade points to make it more general

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
                             </div>
                             <div class="step-box">
                                 <div class="header"> Step Two </div>
-                                <div class="sub-text"> Retrieve your total credit hours & total quality points </div>
+                                <div class="sub-text"> Retrieve your total credit hours & total grade points </div>
                             </div>
                             <div class="step-box">
                                 <div class="header"> Step Three </div>
@@ -68,7 +68,7 @@
                                     <input type="text" id="curr-GPA" placeholder="100">
                                 </div>
                                 <div class="input-wrap2">
-                                    <label for ="curr-QP">Total Quality Points:</label>
+                                    <label for ="curr-QP">Total Grade Points:</label>
                                     <input type="text" id="curr-QP" placeholder="400">
                                 </div>
                             
