slight instructions style changes

--- a/html/index.html
+++ b/html/index.html
@@ -33,11 +33,18 @@
                             </div>
                             <div class="step-box">
                                 <div class="header"> Step Two </div>
-                                <div class="sub-text"> Retrieve your total credit hours & total grade points </div>
+                                <div class="sub-text"> 
+                                    Retrieve your total credit hours & total grade points.
+                                    Total grade points is the value of a grade (ex. A = 4.0) times the credit hours of that course
+                                    for every course you have taken. 
+                                </div>
                             </div>
                             <div class="step-box">
                                 <div class="header"> Step Three </div>
-                                <div class="sub-text"> Input your hypothetical / projected semesterly grades in the input section → </div>
+                                <div class="sub-text"> 
+                                    Input your hypothetical / projected semesterly grades in the input section.
+                                    You can use the other tab to help calculate your weighted individual course grades.
+                                </div>
                             </div>
 
                             <div class="about-section">
