fixed index problem u dumbass

--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,9 @@
                                 <div class="sub-text"> 
                                     Input your hypothetical / projected semesterly grades in the input section.
                                     You can use the other tab to help calculate your weighted individual course grades.
+                                    The keep grade checkbox will exclude a class from the pass/fail optimization if you know
+                                    you want to keep the course for a grade. The retake checkbox is to account for correct 
+                                    cumulative GPA calculation if the course you are taking this semester is a retake.
                                 </div>
                             </div>
 
