--- a/html/index.html
+++ b/html/index.html
@@ -205,12 +205,17 @@
                     <div class="input-wrap">
                         <div class="input-box">
                             
-                            <div class="about-text-header">About Gandalf</div>
+                            <div class="about-text-header">The Gandalf Algorithm</div>
                             <div class="about-text">The Grade Wizard was implemented in order to automate the process of determining 
-                                which classes a student should count for credit in order to optimize their cumulative GPA's.
+                                which classes a student should count for credit in order to optimize their cumulative GPA.
+                            </div>
+                            <div class="about-text">Through the use of a magical algorithm, Gandalf deduces which classes will positively impact one's cumulative GPA, 
+                                through the use of quality points and GPA hours. 
+                            </div>
+                            <div class="about-text">First, one's cumulative GPA is calculated by dividing the quality points 
+                                obtained from a transcript by the total amount of GPA hours one has accumulated.
                             </div>
 
-                            
                         </div>  
                     </div>
                 <!-- </div> -->
