--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
-        <link rel="stylesheet" type = "text/css" href="../css/style.css">       
+        <link rel="stylesheet" type = "text/css" href="./css/style.css">       
     </head>
     <body>
         <div class="flex-container">
@@ -246,8 +246,8 @@
             </div>
         </div>
         
-        <script type="text/javascript" src="../js/ClickFunctions.js"></script>
-        <script type="module" src = "../js/script.js"></script>
+        <script type="text/javascript" src="./js/ClickFunctions.js"></script>
+        <script type="module" src = "./js/script.js"></script>
         
     </body>
 </html>
