minor fixes to instructions and about section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                                 <div class="header"> Step Three </div>
                                 <div class="sub-text"> 
                                     Input your hypothetical / projected semesterly grades in the input section.
-                                    You can use the other tab to help calculate your weighted individual course grades.
                                     The keep grade checkbox will exclude a class from the pass/fail optimization if you know
                                     you want to keep the course for a grade. The retake calculation is done as grade replacement.
                                 </div>
@@ -59,7 +58,7 @@
                                 <div class="disclaimer-text">
                                     This app is simply meant to be a tool for calculating one's gpa. 
                                     It is not meant to be the ultimate dictator of any decisions made about one's academic career.
-                                    No data is being collected or sent about any users.
+                                    No personal data is being collected or sent about any users.
                                 </div>
                             </div>
                         </div>
@@ -100,8 +99,8 @@
                                 </table> 
                             <div class="form-btn">
                                 <button type="submit" id="passFail-submit-btn">Submit</button>
-                                <button type="submit" id="passFail-addRow-btn">Add Class</button>
-                                <button type="submit" id="passFail-removeRow-btn">Remove Class</button>
+                                <button type="submit" id="passFail-addRow-btn">Add Row</button>
+                                <button type="submit" id="passFail-removeRow-btn">Remove Row</button>
                             </div>
                             <div class="output-box" id="out">
                                 <!--DISPLAY OUTPUTS-->
@@ -230,9 +229,7 @@
                             <div class="about-text">Through the use of a magical algorithm, Gandalf deduces which classes will positively impact one's cumulative GPA, 
                                 through the use of quality points and GPA hours. 
                             </div>
-                            <div class="about-text">First, one's cumulative GPA is calculated by dividing the quality points 
-                                obtained from a transcript by the total amount of GPA hours one has accumulated.
-                            </div>
+                            <div class="about-text">We also provide a course grade calculator as a suplemental tool that one can use to project their grade in a specific class.</div>
 
                         </div>  
                     </div>
