made both disclaimers the same

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="disclaimer-text">
                                 This app is simply meant to be a tool for calculating one's gpa. 
                                 It is not meant to be the ultimate dictator of any decisions made about one's academic career.
-                                No data is being collected or sent about any users.
+                                No personal data is being collected or sent about any users.
                             </div>
                         </div>
                     </div>
