changed margin for output, fixed spelling error, fixed placeholder value for grade calc

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="about-text">Through the use of a magical algorithm, Gandalf deduces which classes will positively impact one's cumulative GPA, 
                                 through the use of quality points and GPA hours. 
                             </div>
-                            <div class="about-text" id="bottom-text">We also provide a course grade calculator as a suplemental tool that one can use to project their grade in a specific class.</div>
+                            <div class="about-text" id="bottom-text">We also provide a course grade calculator as a supplemental tool that one can use to project their grade in a specific class.</div>
 
                         </div>  
                     </div>
