anon ips for google analytics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'UA-164027711-1');
+            gtag('config', 'UA-164027711-1', { 'anonymize_ip': true });
         </script>
 
         <title>thegradewizard</title>
