suck my dickkkk

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <div class="header"> Step Two </div>
                                 <div class="sub-text"> 
                                     Retrieve your total gpa hours & total quality points. Total gpa hours are only credit hours that 
-                                    have gone towards your gpa and exclude credits from things such as AP classes or failed classes. 
+                                    have gone towards your gpa and exclude credits from things such as AP classes, failed classes, and transfer credits. 
                                     Total quality points is the value of a grade (ex. A = 4.0) times the credit hours of that course
                                     for every course you have taken. 
                                 </div>
