tard sentence fix

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <div class="sub-text"> 
                                     Input your hypothetical / projected semesterly grades in the input section.
                                     The keep grade checkbox will exclude a class from the pass/fail optimization if you know
-                                    you want to keep the course for a grade. The retake calculation is done as grade replacement.
+                                    you want to keep the course for a grade. The retake calculation is done as a grade replacement.
                                 </div>
                             </div>
 
