--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
         <link rel="stylesheet" type = "text/css" href="./css/style.css">       
+        <link rel="icon" 
+                type="image/png" 
+                href="assets/wizardhat.png">
     </head>
     <body>
         <div class="flex-container">
             <div class="topnav" id="navBar"> 
-                <div class="topbar-text nav-item" id="logo">◐ grade wizard ◑</div>
+                <div class="topbar-text nav-item" id="logo">
+                    <!-- <img icon="69" src="assets/wizardhat.png" alt="◑"/>  -->
+                    ◐ grade wizard ◑
+                </div>
 
                 <div class="nav-button nav-item" id="passFailCalc-page-btn"> p/f gpa calc </div>
                 <div class="nav-button nav-item" id="classGradeCalc-page-btn"> course grade </div>
@@ -45,18 +51,20 @@
                             <div class="step-box">
                                 <div class="header"> Step Two </div>
                                 <div class="sub-text"> 
-                                    Retrieve your <strong><em>total gpa hours</em></strong> & <strong><em>total quality points</em></strong>. <strong><em>Total gpa hours</em></strong> are only credit hours that 
-                                    have gone towards your gpa and exclude credits from things such as AP classes, classes you have withdrawn from, and transfer credits. 
-                                    <strong><em>Total quality points</em></strong> is the value of a grade (ex. A = 4.0) times the credit hours of that course
+                                    Retrieve your <strong><em>total gpa hours</em></strong> & <strong><em>total quality points</em></strong>.<br>
+                                    <br><strong><em>Total gpa hours</em></strong> are only credit hours that 
+                                    have gone towards your gpa and exclude credits from things such as AP classes, classes you have withdrawn from, and transfer credits. <br>
+                                    <br><strong><em>Total quality points</em></strong> is the value of a grade (ex. A = 4.0) times the credit hours of that course
                                     for every course you have taken. 
                                 </div>
                             </div>
                             <div class="step-box">
                                 <div class="header"> Step Three </div>
                                 <div class="sub-text"> 
-                                    Input your hypothetical / projected semesterly grades in the input section.
-                                    The <strong><em>keep grade</em></strong> checkbox will exclude a class from the pass/fail optimization if you know
-                                    you want to keep the course for a grade. The <strong><em>retake</em></strong> calculation is done as a grade replacement.
+                                    Input your hypothetical / projected semesterly grades in the input section. <br>
+                                    <br>The <strong><em>keep grade</em></strong> checkbox will exclude a class from the pass/fail optimization if you know
+                                    you want to keep the course for a grade. <br>
+                                    <br>The <strong><em>retake</em></strong> calculation is done as a grade replacement.
                                 </div>
                             </div>
 
@@ -89,7 +97,7 @@
 
                                     </div>
                                     <div class="help-tip">
-                                        <p>Total quality points can be found by multiplying <strong><em>total gpa points</em></strong> and <strong><em>cumulative gpa</em></strong>.
+                                        <p>Total quality points can be found by multiplying <strong><em>total gpa hours</em></strong> and <strong><em>cumulative gpa</em></strong>.
                                             However, this could be slightly less accurate than finding the total quality points on your transcript as schools round/cut off gpa decimals.
                                             Quality points are also referred to as grade points at some schools.
                                         </p>
