changed wizard hat and other stuffz

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" type = "text/css" href="./css/style.css">       
         <link rel="icon" 
                 type="image/png" 
-                href="assets/wizardhat.png">
+                href="assets/wizardhatnotasdark.png">
     </head>
     <body>
         <div class="flex-container">
@@ -249,12 +249,16 @@
                     <div class="input-wrap">
                         <div class="input-box">
                             
-                            <div class="about-text-header">The Grade Wizard Algorithm</div>
-                            <div class="about-text">The Grade Wizard was implemented in order to automate the process of determining 
-                                which classes a student should count for credit in order to optimize their cumulative GPA.
+                            <div class="about-text-header">The Grade Wizard</div>
+                            <div class="about-text">
+                                The Grade Wizard was implemented in order to automate the process of determining 
+                                which classes a student should count for a grade or pass/fail in order to optimize their cumulative GPA.
                             </div>
-                            <div class="about-text">Through the use of a magical algorithm, the Grade Wizard deduces which classes will positively impact one's cumulative GPA, 
-                                through the use of quality points and GPA hours. 
+                            <div class="about-text">
+                                Through the use of a magical algorithm, the Grade Wizard deduces which classes will positively impact one's cumulative GPA.
+                            </div>
+                            <div class="about-text">
+                                GPA is found from dividing quality points by gpa hours.
                             </div>
                             <div class="about-text" id="bottom-text">We also provide a course grade calculator as a supplemental tool that one can use to project their grade in a specific class.</div>
 
