--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" type = "text/css" href="./css/style.css">       
         <link rel="icon" 
                 type="image/png" 
-                href="assets/wizardhatnotasdark.png">
+                href="assets/wizardhat.png">
     </head>
     <body>
         <div class="flex-container">
