about page change

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="instructions">
                             <div class="step-box">
                                 <div class="header"> Step One </div>
-                                <div class="sub-text"> Obtain your unofficial academic transcript</div>
+                                <div class="sub-text"> Obtain your unofficial academic transcript.</div>
                             </div>
                             <div class="step-box">
                                 <div class="header"> Step Two </div>
@@ -255,12 +255,17 @@
                                 which classes a student should count for a grade or pass/fail in order to optimize their cumulative GPA.
                             </div>
                             <div class="about-text">
-                                Through the use of a magical algorithm, the Grade Wizard deduces which classes will positively impact one's cumulative GPA.
+                                GPA is found from dividing quality points by gpa hours. Gpa hours are credit hours that exclude credits from things such as AP classes
+                                and transfer credits. Quality points are the value of a grade (ex. A = 4.0) times the credits for that course. Finding your cumulative gpa
+                                is then done by adding all quality points for every course and dividing it by the gpa hours for all those courses.
                             </div>
                             <div class="about-text">
-                                GPA is found from dividing quality points by gpa hours.
+                                The Grade Wizard will tell you which classes you should pass/fail in order to get the highest cumulative gpa. It also will tell you your normal
+                                cumulative gpa with pass/fail optimization for comparison.
                             </div>
-                            <div class="about-text" id="bottom-text">We also provide a course grade calculator as a supplemental tool that one can use to project their grade in a specific class.</div>
+                            <div class="about-text" id="bottom-text">
+                                We also provide a course grade calculator as a supplemental tool that one can use to project their grade in a specific class.
+                            </div>
 
                         </div>  
                     </div>
