responsiveness style changes

--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
                                 <div class="header"> GPA SCALE: </div>
                                 <div class="sub-text"> 
                                     <div class="grade">
+                                    A+ = 4.3
+                                    </div>
+                                    <div class="grade">
                                     A = 4
                                     </div>
                                     <div class="grade">
