idk some changes

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <!--INSTRUCTIONS BOX-->
                     <div class="instruct-wrap">
                         <div class="instructions">
-                            <div class="step-box">
+                            <div class="step-box gpa-scale-box">
                                 <div class="header"> GPA SCALE: </div>
                                 <div class="sub-text"> 
                                     <div class="grade">
