added fixed footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     you want to keep the course for a grade. <br>
                                     <br>The <strong><em>retake</em></strong> calculation is done as a grade replacement. <br>
 
-                                    <br> The gpa scale used can be found on the about page
+                                    <br> The <strong><em></em>gpa scale</em></strong> used can be found on the about page
                                 </div>
                             </div>
 
