tooltip responsiveness fix

--- a/index.html
+++ b/index.html
@@ -87,17 +87,15 @@
                     <div class="input-wrap">
                         <div class="input-box">
                                 <div class="input-wrap-with-tooltip">
-                                    <div class="input-wrap2">
+                                    <div class="input-wrap2 gpa-hours">
                                         <label for ="curr-GPA">Total GPA Hours:</label>
                                         <input type="text" id="curr-GPA" placeholder="100">
                                     </div>
                                     <div class="input-wrap2">
                                         <label for ="curr-QP">Total Quality Points:</label>
                                         <input type="text" id="curr-QP" placeholder="400">
-                                        <!-- <abbr>Tooltip<span><b>Most Light-weight Tooltip</b><br>This is the easy-to-use Tooltip driven purely by CSS.</span></abbr> -->
-                                        
-
                                     </div>
+
                                     <div class="help-tip">
                                         <p>Total quality points can be found by multiplying <strong><em>total gpa hours</em></strong> and <strong><em>cumulative gpa</em></strong>.
                                             However, this could be slightly less accurate than finding the total quality points on your transcript as schools round/cut off gpa decimals.
