centered gpa scales switcher

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                             <div class="step-box">
                                 <div class="header"> Step One </div>
                                 <div class="sub-text">
-                                    This serves as a simple weighted average calculator.
-                                    Input your the grade earned for each section as a percentage.
+                                    This serves as a simple weighted average calculator for a single course.
+                                    Input your the grade earned for each weighted section as a percentage.
                                 </div>
                             </div>
                             <div class="step-box">
@@ -199,7 +199,7 @@
                 <!-- <div class="view-container"> -->
 
                     <!--INSTRUCTIONS BOX-->
-                    <div class="instruct-wrap">
+                    <div class="instruct-wrap gpa-scales">
                         <div class="instructions">
                             <div class="step-box gpa-switch-box">
                                 <div class="header">Switch GPA scales: </div>
@@ -231,7 +231,7 @@
                             </div>
                             <div class="about-text">
                                 The Grade Wizard will tell you which classes you should pass/fail in order to get the highest cumulative gpa. It also will tell you your normal
-                                cumulative gpa with pass/fail optimization for comparison.
+                                cumulative gpa without pass/fail optimization for comparison.
                             </div>
                             <div class="about-text" id="bottom-text">
                                 We also provide a course grade calculator as a supplemental tool that one can use to project their grade in a specific class.
