--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
                                 which classes a student should count for a grade or pass/fail in order to optimize their cumulative GPA.
                             </div>
                             <div class="about-text">
-                                GPA is found from dividing quality points by gpa hours. Gpa hours are credit hours that exclude credits from things such as AP classes
-                                and transfer credits. Quality points are the value of a grade (ex. A = 4.0) times the credits for that course. Finding your cumulative gpa
-                                is then done by adding all quality points for every course and dividing it by the gpa hours for all those courses.
+                                GPA is found from dividing quality points by gpa hours. GPA hours are credit hours that exclude credits from things such as AP classes
+                                and transfer credits. Quality points are the value of a grade (ex. A = 4.0) times the credits for that course. Finding your cumulative GPA
+                                is then done by adding all quality points for every course and dividing it by the GPA hours for all those courses.
                             </div>
                             <div class="about-text">
-                                The Grade Wizard will tell you which classes you should pass/fail in order to get the highest cumulative gpa. It also will tell you your normal
-                                cumulative gpa without pass/fail optimization for comparison.
+                                The Grade Wizard will tell you which classes you should pass/fail in order to get the highest cumulative GPA. It also will tell you your normal
+                                cumulative GPA without pass/fail optimization for comparison.
                             </div>
                             <div class="about-text" id="bottom-text">
                                 We also provide a course grade calculator as a supplemental tool that one can use to project their grade in a specific class.
