special characters removal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="topnav" id="navBar"> 
                 <div class="topbar-text nav-item" id="logo">
                     <!-- <img icon="69" src="assets/wizardhat.png" alt="◑"/>  -->
-                    ◐ grade wizard ◑
+                    grade wizard
                 </div>
 
                 <div class="nav-button nav-item" id="passFailCalc-page-btn"> p/f gpa calc </div>
