add explanation in about section

--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
                                 which classes a student should count for a grade or pass/fail in order to optimize their cumulative GPA.
                             </div>
                             <div class="about-text">
-                                GPA is found from dividing quality points by gpa hours. GPA hours are credit hours that exclude credits from things such as AP classes
-                                and transfer credits. Quality points are the value of a grade (ex. A = 4.0) times the credits for that course. Finding your cumulative GPA
-                                is then done by adding the quality points for every course and dividing it by the GPA hours for all those courses.
+                                Optimizing ones GPA is not as simple as just doing pass/fail for any class with a grade below your current GPA. For example, 
+                                if you have a 3.25 GPA and are talking 5 classes with grades of C, B+, and 3 A's, your GPA will increase more if you only keep the 
+                                3 A's even though a B+ is still above your current GPA. The Grade Wizard is here to do these calculations for you. On top of that,
+                                by including the ability to override the optimization with the "keep grade" box, we allow users to compare several different
+                                possible GPAs. 
                             </div>
                             <div class="about-text">
                                 The Grade Wizard will tell you which classes you should pass/fail this semester in order to get the highest cumulative GPA. 
